# infrastructure

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Makefile  README.md  aws-inventory.yaml  bootstrap.sh  eco.md  eco.py  iam.yaml  instance.yaml  invokepatch.py  networking.yaml  pyproject.toml  readme.md  requirements.txt  tasks.py  ubuntu.pkr.hcl
.claude/: lockdown-deny.sh  settings.json
.coily/: coily.yaml
.forgejo/workflows/: caddy-shortcuts.yml  lint.yml  trufflehog.yml
.githooks/: post-merge
.github/workflows/: caddy-shortcuts.yml  config.yml  lint.yml  trufflehog.yml  undraft-and-poke-codex.yml
.ward/: ward.yaml
ansible/: README.md  ansible.cfg
ansible/files/: sudoers-coilysiren-fleet
ansible/group_vars/: mac.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: fix-pyexpat.yml  freshen.yml  mac.yml  ser8-bootstrap.yml  sync.yml
assets/: eco-server.service  terraria-server.service  terraria-start-server.sh  terraria-stop-server.sh  terraria.sh
caddy/: Caddyfile
caddy/sites/: .gitkeep  api.caddy  eco-jobs-tracker.caddy  eco-mcp.caddy  galaxy-gen.caddy
caddy/sites-manual/: .gitkeep  audit.caddy
cfn/: dns.yaml
deploy/: 2fauth.yml  cert_manager.yml  coredns_jinja.yml  externalsecret.yml  forgejo-runner-tap-writer.yml  forgejo-runner.yml  forgejo.yml  ntfy.yml  openclaw.yml  registry.yml  repo-recall.yml  secretstore.yml  tangled-knot-ingress.yml
deploy/lunch-money/: README.md  secret.yml  values.yaml
deploy/observability/: README.md  admin-password-externalsecret.yml  grafana-values.yml  node-exporter-values.yml  signoz-tailscale-service.yml  signoz-values.yml  victoria-metrics-values.yml  vmagent-values.yml  vmsingle-nodeport-service.yml  vmsingle-tailscale-service.yml
docs/: FEATURES.md  ansible.md  architecture.md  certificates.md  claude-remote-control.md  claude-session-watcher.md  fail2ban.md  forgejo-deploy-plan.md  glitchtip-deploy-plan.md  k3s-deploy-notes.md  repo-recall-deploy.md  security.md  tailscale-oidc.md  tailscale.md
eco-mod-cache/: ShovelItem.override.cs
eco-server/: Dockerfile
fail2ban/: jail.local
hardware/kai-desktop-tower/: kai-desktop-tower.glb
infra/: server.pkr.hcl
infra/apex-dns/: main.tf
infra/app-infra/: dns.tf  variables.tf  volume.tf
infra/app-instance/: instance.tf  variables.tf
llama/: deploy.yml
scripts/: _lib.py  agents-pointer-migrate.py  backend-start.sh  check-catalog-block.py  claude-remote-control-install-macos.sh  claude-remote-control-install-windows.ps1  claude-remote-control-install-wsl.sh  claude-remote-control-install.sh  claude-remote-control-restart-precheck.sh  claude-session-watcher-install-mac.sh  claude-session-watcher-install-windows.ps1  claude-session-watcher-install.sh  claude-session-watcher.py  clone-coilysiren-repos.sh  coily-audit-dashboard-install-mac.py  coily-audit-dashboard-install.sh  coily-install.sh  coily-update-install.sh  coily-update.sh  coilysiren-forgejo-mirror.sh  coilysiren-github-mirror.sh  coilysiren-pull-all.sh  coilysiren-tangled-knot-autodeploy.sh  coilysiren-tangled-knot-mirror.sh  core-keeper-pre.sh  core-keeper-server-pre.sh  core-keeper-server-start.sh  core-keeper-start.sh  create-deploy-user.sh  eco-server-copy.ps1  eco-server-pre.sh  eco-server-start.sh  eco-server-start.template.sh  eco-server-stop.sh  eco-server-stop.template.sh  factorio-backup.sh  factorio-server-pre.sh  factorio-server-start.sh  fail2ban-install.sh  fdr-remake-pre.sh  (+47 more)
scripts/ansible/: freshen.py  mac.py  seed_mac_brew.py  sync.py
scripts/k8s/: aws_secrets.py  cert_manager.py  dump_tailscale_acl.py  list_tailscale_devices.py  lunch_money.py  observability.py  observability_admin_password.py  signoz.py  sync_tailscale_oidc_secrets.py  terraform_admin_kms.py  terraform_aws_inventory.py  terraform_grafana.py  terraform_tailscale.py  terraform_tailscale_devices.py  terraform_tailscale_merge.py  terraform_tailscale_oidc.py  terraform_tailscale_policy.py
scripts/launchd/: me.coilysiren.claude-session-watcher.plist  me.coilysiren.coily-audit-dashboard.plist  (+1 more)
src/: backend.py  core.py  core_keeper.py  corekeeper.py  eco.py  icarus.py  k8s.py  llama.py
sshd/: tangled-knot.conf
sudoers/: kai-coilysiren-updates  kai-game-servers
systemd/: caddy-config-deploy.path  caddy-config-deploy.service  claude-remote-control-restart.service  claude-remote-control-restart.timer  claude-remote-control-wsl.service  claude-remote-control.service  claude-session-watcher.service  coily-audit-dashboard.service  coily-audit-dashboard.timer  coily-update.service  coily-update.timer  coilysiren-backend.service  coilysiren-forgejo-mirror.service  coilysiren-forgejo-mirror.timer  coilysiren-github-mirror.service  coilysiren-github-mirror.timer  coilysiren-pull-all.service  coilysiren-pull-all.timer  coilysiren-tangled-knot-autodeploy.service  coilysiren-tangled-knot-autodeploy.timer  coilysiren-tangled-knot-mirror.service  coilysiren-tangled-knot-mirror.timer  core-keeper-server.service  eco-server.service  eco-server.template.sevice  factorio-backup.service  factorio-backup.timer  factorio-server.service  fdr-remake.service  icarus-server.service  k3s.service  kai-server-node-tooling-ensure.service  kai-server-node-tooling-ensure.timer  personal-dashboard-update.service  personal-dashboard-update.timer  personal-dashboard.service  process-memory-heartbeat.service  process-memory-heartbeat.timer  repo-recall-update.service  repo-recall-update.timer  (+5 more)
templates/: apex-dns.yaml  bootstrap.template  dns.yaml  ecr.yaml  iam.yaml  instance.yaml  security-groups.yaml  volume.yaml
(+92 files in other folders)
