[project]
name = "infrastructure"
version = "0.1.0"
description = "k3s + coily + external-secrets + Traefik homelab cluster config and helper scripts."
requires-python = ">=3.13"
dependencies = [
    "ansible",
    "boto3",
    "jinja2",
    "requests",
    "watchdog",
]

[dependency-groups]
dev = [
    "pylint==3.3.9",
]

[tool.agentic-os.documentation-layout]
# Per-module READMEs are real, co-located docs (Terraform stacks, deploy
# manifests). Keep them beside their module rather than flattening into docs/.
# Oversized docs/*.md and skill SKILL.md entries below are pre-existing runbook
# debt grandfathered when the v0.11.1 hook block landed (coilysiren/infrastructure#181);
# splitting them under the 80-line / 4000-char cap is tracked as follow-up.
excludes = [
    "ansible/README.md",
    "deploy/*/README.md",
    "terraform/*/README.md",
    "docs/FEATURES.md",
    "docs/ansible.md",
    "docs/eco-server-setup.md",
    "docs/certificates.md",
    "docs/claude-remote-control.md",
    "docs/claude-session-watcher.md",
    "docs/forgejo-deploy-plan.md",
    "docs/glitchtip-deploy-plan.md",
    "docs/k3s-deploy-notes.md",
    "docs/repo-recall-deploy.md",
    "docs/tailscale.md",
    "skills/ops-investigation-k3s-pod-eviction/SKILL.md",
    "skills/ops-investigation-k3s-upgrade-homelab/SKILL.md",
]

[tool.agentic-os.code-comments]
# code-comments first enabled here at agentic-os v0.14.0 (#217), which also
# extended the rule to YAML. The active ansible/** surface (YAML + its Python
# modules) is held to the rule. Everything else is pre-existing comment debt
# surfacing on first run - the deploy/terraform/workflow YAML and the
# operational scripts/** shell+Python headers - grandfathered and retired
# incrementally in #218.
excludes = [
    "deploy/**",
    "terraform/**",
    "scripts/**",
    ".coily/coily.yaml",
    ".forgejo/workflows/**",
]
