[project]
name = "infrastructure"
version = "0.1.0"
description = "k3s + coily + external-secrets + Traefik homelab cluster config and helper scripts."
requires-python = ">=3.13"
dependencies = [
    "ansible",
    "boto3",
    "jinja2",
    "pipx>=1.14.0",
    "requests",
    "watchdog",
]

[dependency-groups]
dev = [
    "pylint==3.3.9",
]

[tool.agentic-os.documentation-layout]
# Per-module READMEs are real, co-located docs (Terraform stacks, deploy
# manifests). Keep them beside their module rather than flattening into docs/.
# Oversized docs/*.md and skill SKILL.md entries below are pre-existing runbook
# debt grandfathered when the v0.11.1 hook block landed (coilyco-flight-deck/infrastructure#181);
# splitting them under the 80-line / 4000-char cap is tracked as follow-up.
excludes = [
    # eco-server/ is the gitignored Eco game-server tree (vendored mods, config
    # dumps). These tree-walking hooks bypass .gitignore, so the dir needs an
    # explicit exclude or its mod READMEs/AGENTS files fail the layout cap.
    "eco-server/",
    "eco-server/**",
    "ansible/README.md",
    "deploy/*/README.md",
    "terraform/*/README.md",
    "docs/FEATURES.md",
    "docs/ansible.md",
    "docs/eco-server-setup.md",
    "docs/certificates.md",
    "docs/claude-remote-control.md",
    "docs/claude-session-watcher.md",
    "docs/forgejo-deploy-plan.md",
    "docs/glitchtip-deploy-plan.md",
    "docs/k3s-deploy-notes.md",
    "docs/repo-recall-deploy.md",
    "docs/tailscale.md",
    "skills/ops-investigation-k3s-pod-eviction/SKILL.md",
    "skills/ops-investigation-k3s-upgrade-homelab/SKILL.md",
]

[tool.agentic-os.context-load-points]
# Same gitignored Eco game-server tree as above. Its vendored mod AGENTS.md
# files are not real load-point rungs; exclude the dir from the walk.
excludes = [
    "eco-server/",
    "eco-server/**",
]

[tool.agentic-os.code-comments]
# Enabled at agentic-os v0.14.0 (#217), tree cleaned at v0.16.0 (#276). The only
# exclude is the managed-hooks marker file: its BEGIN/END comments are structural,
# required by apply-agentic-os-hooks.py at fixed positions, so they cannot move to
# line 1. agentic-os excludes its own .pre-commit-config.yaml for the same reason.
excludes = [
    ".pre-commit-config.yaml",
]
